# plasma-wateriv

./: BUGS.txt  CHANGELOG.txt  CMakeLists.txt  ProjectHome.md  README.txt  WaterIVDataEngine.md  WaterIVDataEngineV0.md  WaterIVDataEngineV1and2.md  WaterSitesDataEngine.md  ivrequest.cpp  ivrequest.h  plasma-dataengine-wateriv.desktop  waterivdata.h  waterivengine.cpp  waterivengine.h  watersitesdata_agencycodes.cpp  watersitesdata_agencycodes.h  watersitesdata_countycodes.cpp  watersitesdata_countycodes.h  watersitesdata_mapper.cpp  watersitesdata_mapper.h
branches/plasma-applet-waterwatcher-0.2.x/debian/: copyright
branches/plasma-applet-waterwatcher-0.2.x/plasma_applet_wateriv.waterwatcher/contents/config/: main.xml
branches/plasma-applet-waterwatcher-0.2.x/plasma_applet_wateriv.waterwatcher/contents/ui/: InfoPanel.qml  main.qml
branches/plasma-applet-waterwatcher-0.3.x/: CHANGELOG.txt  README.txt
branches/plasma-applet-waterwatcher-0.3.x/debian/: copyright
branches/plasma-applet-waterwatcher-0.3.x/plasma_applet_wateriv.waterwatcher/: CHANGELOG.txt  metadata.desktop
branches/plasma-applet-waterwatcher-0.3.x/plasma_applet_wateriv.waterwatcher/contents/code/: neterrors.js
branches/plasma-applet-waterwatcher-0.3.x/plasma_applet_wateriv.waterwatcher/contents/config/: main.xml
branches/plasma-applet-waterwatcher-0.3.x/plasma_applet_wateriv.waterwatcher/contents/ui/: ConfigPanel.qml  ImgButton.qml  InfoDialog.qml  MainWidget.qml  NetErrorPanel.qml  SiteSearchFilterList.qml  SiteSearchMainPanel.qml
branches/plasma-dataengine-wateriv-0.2.x/: README.txt
branches/plasma-dataengine-wateriv-0.3.x/: CHANGELOG.txt  README.txt  waterivdata_waterml.cpp  waterivengine.h
branches/plasma-dataengine-wateriv-0.3.x/debian/: changelog
branches/plasma-dataengine-wateriv-0.4.x/: BUGS.txt
branches/plasma-dataengine-watersites-0.1.x/: sitesrequest.cpp  watersitesdata_sitetypes.cpp
data/: countycodes.xml
debian/: changelog  copyright
plasma-applet-waterwatcher/: BUGS.txt  CHANGELOG.txt  CMakeLists.txt  README.txt
plasma-applet-waterwatcher/debian/: control  copyright
plasma-applet-waterwatcher/plasma_applet_wateriv.waterwatcher/: metadata.desktop
plasma-applet-waterwatcher/plasma_applet_wateriv.waterwatcher/contents/code/: display.js  neterrors.js
plasma-applet-waterwatcher/plasma_applet_wateriv.waterwatcher/contents/config/: main.xml
plasma-applet-waterwatcher/plasma_applet_wateriv.waterwatcher/contents/ui/: ArrowButton.qml  InfoDialog.qml  MainWidget.qml  NetErrorPanel.qml  RecentPanel.qml  SiteSearchFilterPanel.qml  SiteSearchMainPanel.qml  SiteSearchResultsPanel.qml  SitesPanel.qml  TextButton.qml  TextField.qml  config.ui  main.qml
plasma-dataengine-wateriv/: BUGS.txt  CHANGELOG.txt  CMakeLists.txt  README.txt  ivrequest.cpp  plasma-dataengine-wateriv.desktop  waterivdata_waterml.cpp  waterivdata_waterml.h  waterivengine.cpp  waterivengine.h
plasma-dataengine-wateriv/debian/: changelog  control
plasma-dataengine-wateriv/src/: CMakeLists.txt  ivrequest.h  plasma-dataengine-wateriv.desktop  waterivengine.cpp  waterivengine.h
plasma-dataengine-watersites/: CMakeLists.txt  README.txt  plasma-dataengine-watersites.desktop  sitesrequest.cpp  watersitesdata_statecodes.h  watersitesengine.cpp  watersitesengine.h
plasma_applet_wateriv.waterwatcher/: metadata.desktop
plasma_applet_wateriv.waterwatcher/contents/code/: neterrors.js
plasma_applet_wateriv.waterwatcher/contents/config/: main.xml
plasma_applet_wateriv.waterwatcher/contents/ui/: ConfigPanel.qml  ImgButton.qml  InfoDialog.qml  InfoPanel.qml  MainWidget.qml  NetErrorPanel.qml  RecentPanel.qml  SiteSearchFilterList.qml  SiteSearchFilterPanel.qml  SiteSearchMainPanel.qml  SiteSearchQueryPanel.qml  SiteSearchResultsPanel.qml  TextField.qml  config.ui  main.qml
tags/plasma-applet-waterwatcher-0.2.1/: CHANGELOG.txt  CMakeLists.txt
tags/plasma-applet-waterwatcher-0.3.0/plasma_applet_wateriv.waterwatcher/: metadata.desktop
tags/plasma-applet-waterwatcher-0.3.1/: CHANGELOG.txt  CMakeLists.txt
tags/plasma-dataengine-wateriv-0.1.0/: CMakeLists.txt  ivrequest.cpp
tags/plasma-dataengine-wateriv-0.2.0/: BUGS.txt  waterivengine.h
tags/plasma-dataengine-wateriv-0.3.0/: waterivdata_waterml.cpp
tags/plasma-dataengine-wateriv-0.3.0/debian/: copyright
tags/plasma-dataengine-wateriv_0.1.0/: plasma-dataengine-wateriv.desktop
tags/plasma-dataengine-watersites-0.1.0/: CHANGELOG.txt  sitesrequest.h  watersitesdata_statecodes.cpp
tags/plasma-dataengine-watersites-0.1.0/data/: agencycodes.xml  sitetypecodes.xml
tags/plasma-dataengine-watersites-0.1.0/debian/: control
trunk/plasma-applet-waterwatcher/: CMakeLists.txt
trunk/plasma-applet-waterwatcher/debian/: changelog  control  copyright
trunk/plasma-applet-waterwatcher/plasma_applet_wateriv.waterwatcher/: metadata.desktop
trunk/plasma-applet-waterwatcher/plasma_applet_wateriv.waterwatcher/contents/code/: listsort.js
trunk/plasma-applet-waterwatcher/plasma_applet_wateriv.waterwatcher/contents/config/: main.xml
trunk/plasma-applet-waterwatcher/plasma_applet_wateriv.waterwatcher/contents/ui/: ConfigPanel.qml  InfoPanel.qml  MainWidget.qml  SiteSearchFilterPanel.qml  SitesPanel.qml  SitesSearch.qml  SitesSearchModel.qml  main.qml
trunk/plasma-dataengine-wateriv/: BUGS.txt  CHANGELOG.txt  CMakeLists.txt  README.txt  ivrequest.cpp  ivrequest.h  plasma-dataengine-wateriv.desktop  waterivengine.cpp  waterivengine.h
trunk/plasma-dataengine-wateriv/debian/: changelog
trunk/plasma-dataengine-wateriv/src/: ivrequest.cpp  waterivengine.cpp
trunk/plasma-dataengine-watersites/: BUGS.txt  CMakeLists.txt  plasma-dataengine-watersites.desktop  sitesrequest.h  watersitesdata_mapper.cpp  watersitesdata_sitetypes.h  watersitesengine.cpp  watersitesengine.h
trunk/plasma-dataengine-watersites/data/: statecodes.xml
trunk/src/: waterivengine.cpp
wiki/: WaterIVDataEngine.wiki  WaterIVDataEngineV0.wiki  WaterIVDataEngineV1and2.wiki  WaterIVEngineData.wiki  WaterSitesDataEngine.wiki
(+14 files in other folders)
